--- a/client/index.html
+++ b/client/index.html
@@ -4,12 +4,13 @@
   <meta charset='utf-8' />
   <meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1' />
   <meta name='viewport' content='width=device-width, initial-scale=1.0'>
-  <link rel='stylesheet' href='/index.css'>
+  <link href='http://fonts.googleapis.com/css?family=Fjalla+One' rel='stylesheet' type='text/css'>
+  <link rel='stylesheet' href='index.css'>
   <title>Colors of SF</title>
 </head>
 
 <body>
-  <script type='text/javascript' src='/index.js'></script>
+  <script type='text/javascript' src='index.js'></script>
 </body>
 
 </html>
